fixed bug where errors were not showing up, backend issue, needed to key into path instead of param

--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -28,4 +28,5 @@ h2 {
     height: 50px;
     border-radius: 10px;
     margin-bottom: 10%;
+    cursor: pointer;
 }
