--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -4,4 +4,5 @@
     margin: 10px;
     box-shadow: 5px 5px rgb(23, 153, 204);
     margin-bottom: 7%;
+    cursor: pointer;
 }
